fixed required form style on IE

--- a/bottlecap/layouts/popper/static/css/elements/forms.less
+++ b/bottlecap/layouts/popper/static/css/elements/forms.less
@@ -524,6 +524,7 @@ select:focus:required:invalid {
             font-weight: normal;
             vertical-align: top;
             padding: 0 .1em;
+            margin: 0;
             font-size: 1.5em;
         }
     }
